--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Kotlin JS Hello World Demo</title>
+    <title>kotlin-js-external-function-demo</title>
 </head>
 <body>
 
 <script type="text/javascript" src="src/main/resources/lib/kotlin.js"></script>
-<script type="text/javascript" src="build/classes/kotlin/main/kotlin-js-hello-world-demo.js"></script>
+<script type="text/javascript" src="build/classes/kotlin/main/kotlin-js-external-function-demo.js"></script>
 
 </body>
 </html>
